# babel

./: CMakeLists.txt  Protocol.md  README.md  conanfile.txt
Client/include/: Form.hpp  LoginForm.hpp  MainWindow.hpp  RegisterForm.hpp
Client/include/Audio/: AudioData.hpp  AudioListener.hpp  AudioManager.hpp  AudioParameters.hpp  AudioRecorder.hpp  IInput.hpp  IOutput.hpp  IPortAudio.hpp  IStream.hpp  PortAudioInput.hpp  PortAudioOutput.hpp  PortAudioStream.hpp
Client/include/Core/: Client.hpp
Client/include/Graphic/: ContactList.hpp  Contacts.hpp  IWindow.hpp  LoginForm.hpp  MainWindow.hpp  RegisterForm.hpp  SigninForm.hpp  SignupForm.hpp
Client/include/Network/: BoostTcpClient.hpp  BoostUdpClient.hpp  ITcpClient.hpp  IUdpClient.hpp  Packet.hpp
Client/src/: Form.cpp  LoginForm.cpp  MainWindow.cpp  RegisterForm.cpp  main.cpp
Client/src/Audio/: AudioData.cpp  AudioListener.cpp  AudioManager.cpp  AudioRecorder.cpp  PortAudioInput.cpp  PortAudioOutput.cpp  PortAudioStream.cpp
Client/src/Core/: Client.cpp
Client/src/Graphic/: ContactList.cpp  Contacts.cpp  Form.cpp  LoginForm.cpp  MainWindow.cpp  RegisterForm.cpp  SigninForm.cpp  SignupForm.cpp  ressources.qrc
Client/src/Network/: BoostTcpClient.cpp  BoostUdpClient.cpp  Packet.cpp
Documentation/html/: _accept_invite_command_8hpp_source.html  _audio_data_8hpp_source.html  _audio_listener_8hpp_source.html  _audio_manager_8hpp_source.html  _audio_parameters_8hpp_source.html  _audio_recorder_8hpp_source.html  _boost_network_client_8hpp_source.html  _boost_network_server_8hpp_source.html  _boost_tcp_client_8hpp_source.html  _boost_udp_client_8hpp_source.html  _client_8hpp_source.html  _command_parser_8hpp_source.html  _contact_list_command_8hpp_source.html  _contacts_8hpp_source.html  _get_invite_command_8hpp_source.html  _get_udp_command_8hpp_source.html  _i_input_8hpp_source.html  _i_network_client_8hpp_source.html  _i_network_server_8hpp_source.html  _i_output_8hpp_source.html  _i_port_audio_8hpp_source.html  _i_storage_8hpp_source.html  _i_stream_8hpp_source.html  _i_tcp_client_8hpp_source.html  _i_udp_client_8hpp_source.html  _i_window_8hpp_source.html  _invite_command_8hpp_source.html  _login_command_8hpp_source.html  _logout_command_8hpp_source.html  _main_window_8hpp_source.html  _network_manager_8hpp_source.html  _packet_8hpp_source.html  _port_audio_input_8hpp_source.html  _port_audio_output_8hpp_source.html  _port_audio_stream_8hpp_source.html  _register_command_8hpp_source.html  _set_udp_command_8hpp_source.html  _signin_form_8hpp_source.html  _signup_form_8hpp_source.html  _sql_client_8hpp_source.html  (+231 more)
Documentation/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_1.js  classes_3.js  classes_4.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  pages_0.js  pages_1.js  searchdata.js
Documentation/latex/: annotated.tex  class_audio_data.tex  class_audio_data__coll__graph.md5  class_audio_manager.tex  class_audio_parameters.tex  class_i_input.tex  class_i_input__inherit__graph.md5  class_i_output.tex  class_i_output__inherit__graph.md5  class_i_port_audio.tex  class_i_port_audio__inherit__graph.md5  class_i_stream.tex  class_i_stream__inherit__graph.md5  class_port_audio_input.tex  class_port_audio_input__coll__graph.md5  class_port_audio_input__inherit__graph.md5  class_port_audio_output.tex  class_port_audio_output__coll__graph.md5  class_port_audio_output__inherit__graph.md5  class_port_audio_stream.tex  class_port_audio_stream__coll__graph.md5  class_port_audio_stream__inherit__graph.md5  classbbl_1_1cli_1_1_boost_tcp_client.tex  classbbl_1_1cli_1_1_boost_tcp_client__coll__graph.md5  classbbl_1_1cli_1_1_boost_tcp_client__inherit__graph.md5  classbbl_1_1cli_1_1_boost_udp_client.tex  classbbl_1_1cli_1_1_boost_udp_client__coll__graph.md5  classbbl_1_1cli_1_1_boost_udp_client__inherit__graph.md5  classbbl_1_1cli_1_1_client.tex  classbbl_1_1cli_1_1_i_tcp_client.tex  classbbl_1_1cli_1_1_i_tcp_client__inherit__graph.md5  classbbl_1_1cli_1_1_i_udp_client.tex  classbbl_1_1cli_1_1_i_udp_client__inherit__graph.md5  classbbl_1_1cli_1_1_packet.tex  classbbl_1_1cli_1_1audio_1_1_audio_listener.tex  classbbl_1_1cli_1_1audio_1_1_audio_listener__coll__graph.md5  classbbl_1_1cli_1_1audio_1_1_audio_listener__inherit__graph.md5  classbbl_1_1cli_1_1audio_1_1_audio_recorder.tex  classbbl_1_1cli_1_1audio_1_1_audio_recorder__coll__graph.md5  classbbl_1_1cli_1_1audio_1_1_audio_recorder__inherit__graph.md5  (+65 more)
Server/include/: BoostNetworkClient.hpp  BoostNetworkServer.hpp  ClientService.hpp  Connection.hpp  INetworkClient.hpp  Server.hpp  example.hpp
Server/include/Core/: AcceptInviteCommand.hpp  CommandParser.hpp  ContactListCommand.hpp  GetInviteCommand.hpp  GetUdpCommand.hpp  InviteCommand.hpp  LoginCommand.hpp  LogoutCommand.hpp  RegisterCommand.hpp  SetUdpCommand.hpp  User.hpp
Server/include/Network/: BoostNetworkClient.hpp  BoostNetworkServer.hpp  INetworkServer.hpp  NetworkManager.hpp
Server/include/Storage/: IStorage.hpp  SqlClient.hpp
Server/src/: BoostNetworkClient.cpp  BoostNetworkServer.cpp  ClientService.cpp  Connection.cpp  NetworkManager.cpp  Server.cpp  main.cpp
Server/src/Core/: CommandParser.cpp  User.cpp
Server/src/Network/: BoostNetworkClient.cpp  BoostNetworkServer.cpp  NetworkManager.cpp
Server/src/Storage/: SqlClient.cpp
